# my-game-engine

./: .gitignore  CMakeLists.txt  README.md  generate-cmakelists.py  thoughts_and_prayers.txt
shaders/: default.frag  mandelbrot.frag  screen_space.vert
src/: CMakeLists.txt  LogChannel.hpp  MeshData.hpp  assertions.hpp  debug.cpp  debug.hpp  file.cpp  file.hpp  main.cpp  namespace gui  shader.cpp  shader.hpp  tmpl.hpp
src/maths/: CMakeLists.txt  MatrixArithmeticOperators.hpp  MatrixBase.hpp  MatrixCasts.hpp  Vector2Base.hpp  Vector3Base.hpp  Vector4Base.hpp  VectorArithmeticOperators.hpp  VectorBase.hpp  VectorCasts.hpp  VectorFormatting.hpp  VectorOperations.hpp  VectorOperators.hpp  functions.hpp  matrices.hpp  matricesOld.hpp  naming_conventions.txt  vectors.hpp  vectors2.hpp  vectorsOld.hpp
